fix mobile menu width on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -3235,7 +3235,7 @@ input[type="button"].btn-block {
   bottom: 0;
   right: 0;
   display: none;
-  width: 30%;
+  width: 40%;
   padding: 30px 20px 0 30px;
   background: #222532;
   opacity: 0.9;
