--- a/source/header.less
+++ b/source/header.less
@@ -74,7 +74,7 @@
   bottom: 0;
   right: 0;
   display: none;
-  width: 30%;
+  width: 40%;
   padding: 30px 20px 0 30px;
   background: @dark-bg;
   opacity: 0.9;
